--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
   <name>springmvc-hibernate-xmlconfig Maven Webapp</name>
   <url>http://maven.apache.org</url>
 <properties>
+	<!-- code change Versions of all Dependencys main branch to sample.demo team member 1-->
+	
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 		<spring.version>5.1.0.RELEASE</spring.version>
 		<hibernate.version>5.3.5.Final</hibernate.version>
